--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <span></span>
             </div>
             <ul class="navbar-menu" id="navbar-menu">
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Blogs</a></li>
+                <li><a href="#" class="active">Work</a></li>
+                <li><a href="./Blog.html">Blogs</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
