complete Blog page

--- a/Blog.html
+++ b/Blog.html
@@ -21,12 +21,57 @@
             <ul class="navbar-menu" id="navbar-menu">
                 <li><a href="#">Work</a></li>
                 <li><a href="/">Blogs</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/">Contact</a></li>
             </ul>
         </nav>
         <section>
             <div class="recent--design UI">
                 <h2>Blog</h2>
+                <div class="UI">
+                    <div class="UI__Card">
+                        <h3>UI Interactions of the week</h3>
+                        <span class="recent__update">
+                            <span class="recent__update__data">12 Feb 2020</span> |
+                            <span class="recent__update__pattern">
+                                Design, Pattern
+                            </span>
+                        </span>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia
+                            consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <div class="UI">
+                    <div class="UI__Card">
+                        <h3>UI Interactions of the week</h3>
+                        <span class="recent__update">
+                            <span class="recent__update__data">12 Feb 2020</span> |
+                            <span class="recent__update__pattern">
+                                Design, Pattern
+                            </span>
+                        </span>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia
+                            consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <div class="UI">
+                    <div class="UI__Card">
+                        <h3>UI Interactions of the week</h3>
+                        <span class="recent__update">
+                            <span class="recent__update__data">12 Feb 2020</span> |
+                            <span class="recent__update__pattern">
+                                Design, Pattern
+                            </span>
+                        </span>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia
+                            consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
                 <div class="UI">
                     <div class="UI__Card">
                         <h3>UI Interactions of the week</h3>
