--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#" class="active">Work</a></li>
                 <li><a href="./Blog.html">Blogs</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="/my-resume.html">Resume</a></li>
             </ul>
         </nav>
         <div>
